--- a/_config.yml
+++ b/_config.yml
@@ -8,21 +8,15 @@ permalink: pretty
 cover_image: /bg.jpg
 
 # Gems
-#plugins:
-#- jekyll-gist
-#  - jekyll-paginate
-#- jekyll-seo-tag
-#- jekyll-feed
-#- jekyll-sitemap
-
 plugins:
-  - jekyll-remote-theme
-
-remote_theme: vszhub/not-pure-poole
-
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-sitemap
 # Optimize Jekyll
 exclude:
-  - .editorconfig
+#  - .editorconfig
   - .git
   - .jekyll-cache
   - Gemfile
