change_repo_name'

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: kkmonster
 description:  生命中有万事的可能
-url:  https://kunmonster.github.io/kkmonster.github.io/
+url:  https://kunmonster.github.io/
 avatar: /avatar.jpg
 paginate: 5
 permalink: pretty
